--- a/HP4 WineQuality.ipynb
+++ b/HP4 WineQuality.ipynb
@@ -6,7 +6,7 @@
       "name": "WineQuality.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMOfgODqGUsLDaAs4XTsZkV",
+      "authorship_tag": "ABX9TyMNN28598cg/kstjSqgrHWO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,15 +23,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/WineQuality.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/HP4%20WineQuality.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UuorcVFPcr04",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UuorcVFPcr04"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -39,14 +37,13 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ul2doUVQIwXr",
-        "colab_type": "text"
+        "id": "ul2doUVQIwXr"
       },
       "source": [
         "# **Can the quality of wine be predicted from its measureable characteristics?**"
@@ -55,8 +52,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RTfR8FLpO8vQ",
-        "colab_type": "text"
+        "id": "RTfR8FLpO8vQ"
       },
       "source": [
         "**Fixed acidity**: acids are major wine properties and contribute greatly to the wine’s taste. Usually, the total acidity is divided into two groups: the volatile acids and the nonvolatile or fixed acids. Among the fixed acids that you can find in wines are the following: tartaric, malic, citric, and succinic. This variable is expressed in g(tartaricacid)/dm3 in the data sets.<br>\n",
@@ -76,8 +72,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "B_SyJzX6OjgM",
-        "colab_type": "text"
+        "id": "B_SyJzX6OjgM"
       },
       "source": [
         "# **Load the libraries**"
@@ -86,9 +81,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yT-tH6kSE_V1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "yT-tH6kSE_V1"
       },
       "source": [
         "from __future__ import absolute_import, division, print_function, unicode_literals\n",
@@ -108,20 +101,19 @@
         "import seaborn as sns\n",
         "import numpy as np\n",
         "\n",
-        "from keras.utils import to_categorical\n",
+        "from tensorflow.keras.utils import to_categorical\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9aWDRwFGOnjE",
-        "colab_type": "text"
+        "id": "9aWDRwFGOnjE"
       },
       "source": [
         "# **Load the data**\n",
@@ -133,9 +125,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-DaKr4tTFZb3",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-DaKr4tTFZb3"
       },
       "source": [
         "# Read in white wine data \n",
@@ -145,41 +135,36 @@
         "# Read in red wine data \n",
         "red = pd.read_csv(\"winequality-red.csv\", sep=';')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qbTUJdyMFlPq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "qbTUJdyMFlPq"
       },
       "source": [
         "# Print info on white wine\n",
         "white.tail()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Eun_foKFq7V",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8Eun_foKFq7V"
       },
       "source": [
         "red.tail()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pD2E2UZZO5G9",
-        "colab_type": "text"
+        "id": "pD2E2UZZO5G9"
       },
       "source": [
         "# **Combine the two files into one file called wines**"
@@ -188,8 +173,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WCpQv2HYPR9P",
-        "colab_type": "text"
+        "id": "WCpQv2HYPR9P"
       },
       "source": [
         "\n",
@@ -201,9 +185,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
-        "id": "NXpyqR0qJUx6",
-        "colab": {}
+        "id": "NXpyqR0qJUx6"
       },
       "source": [
         "#combine reds and whites into one dataset\n",
@@ -216,27 +198,24 @@
         "# Append `white` to `red`\n",
         "wines = red.append(white, ignore_index=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SMfitEJTQLE8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "SMfitEJTQLE8"
       },
       "source": [
         "wines"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qiTSR74sO_sS",
-        "colab_type": "text"
+        "id": "qiTSR74sO_sS"
       },
       "source": [
         "# **Check out the distribution of the type of wines**"
@@ -245,21 +224,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8e4fGVfT7avb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8e4fGVfT7avb"
       },
       "source": [
         "wines['quality'].value_counts()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xBbo1BJIPG04",
-        "colab_type": "text"
+        "id": "xBbo1BJIPG04"
       },
       "source": [
         "# **Check for missing data in wines**"
@@ -268,21 +244,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Oe8kyVIHyrH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8Oe8kyVIHyrH"
       },
       "source": [
         "wines.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vUrhO4ncPLS2",
-        "colab_type": "text"
+        "id": "vUrhO4ncPLS2"
       },
       "source": [
         "# **Is there a strong correlation between any of the features?**\n",
@@ -293,9 +266,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9hMYRhmaGgnv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9hMYRhmaGgnv"
       },
       "source": [
         "corr = wines.corr()\n",
@@ -304,14 +275,13 @@
         "            yticklabels=corr.columns.values)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yNfi7Xh3PtSa",
-        "colab_type": "text"
+        "id": "yNfi7Xh3PtSa"
       },
       "source": [
         "# **Split the dataset into a training set and a test set**\n",
@@ -321,8 +291,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PDPVGPojat4J",
-        "colab_type": "text"
+        "id": "PDPVGPojat4J"
       },
       "source": [
         "**The 'frac' variable is a hyperparameter that can be tuned "
@@ -331,9 +300,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "usMnFS-mH5sf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "usMnFS-mH5sf"
       },
       "source": [
         "#Consider changing the ratio of the train/test split\n",
@@ -342,27 +309,24 @@
         "wines_test = wines.drop(wines_train.index)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H1rxVuiQLeV-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "H1rxVuiQLeV-"
       },
       "source": [
         "wines_train"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "J_XshQkuPd5b",
-        "colab_type": "text"
+        "id": "J_XshQkuPd5b"
       },
       "source": [
         "# **Remove the labels from the dataset**"
@@ -371,65 +335,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mZgwjudzJGTT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mZgwjudzJGTT"
       },
       "source": [
         "train_labels = wines_train.pop('quality')\n",
         "test_labels = wines_test.pop('quality')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ei8uCJ3zyrKT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ei8uCJ3zyrKT"
       },
       "source": [
         "wines_train"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
-        "id": "ZOf2VECnxmIj",
-        "colab": {}
+        "id": "ZOf2VECnxmIj"
       },
       "source": [
         "train_stats = wines_train.describe()\n",
         "train_stats = train_stats.transpose()\n",
         "train_stats"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aX1uBIHs3kH1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aX1uBIHs3kH1"
       },
       "source": [
         "test_stats = wines_test.describe()\n",
         "test_stats = test_stats.transpose()\n",
         "test_stats"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-OZ852UxQSRy",
-        "colab_type": "text"
+        "id": "-OZ852UxQSRy"
       },
       "source": [
         "# **Normalize the data**"
@@ -438,9 +393,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qUSR2qiZJXZ4",
-        "colab_type": "code",
-        "colab": {}
+        "id": "qUSR2qiZJXZ4"
       },
       "source": [
         "def norm(x):\n",
@@ -450,14 +403,13 @@
         "normed_test_data = norm(wines_test)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QFfFXJVCQVe9",
-        "colab_type": "text"
+        "id": "QFfFXJVCQVe9"
       },
       "source": [
         "# **Build the model**\n",
@@ -480,9 +432,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SkPd6dsHKjOF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "SkPd6dsHKjOF"
       },
       "source": [
         "\n",
@@ -506,41 +456,36 @@
         "  return model\n",
         "  print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9-XvRacbKv-9",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9-XvRacbKv-9"
       },
       "source": [
         "model = build_model()\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "STeikey08EbB",
-        "colab_type": "code",
-        "colab": {}
+        "id": "STeikey08EbB"
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0H-i6gZRQY8T",
-        "colab_type": "text"
+        "id": "0H-i6gZRQY8T"
       },
       "source": [
         "# **Train the model**\n",
@@ -550,9 +495,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q8TCn9MsLQsl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Q8TCn9MsLQsl"
       },
       "source": [
         "EPOCHS = 20\n",
@@ -560,29 +503,26 @@
         "  normed_train_data, train_labels,\n",
         "  epochs=EPOCHS, validation_split = 0.2, verbose=0,batch_size = 16 )"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m1ZrssAtLWvN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "m1ZrssAtLWvN"
       },
       "source": [
         "hist = pd.DataFrame(history.history)\n",
         "hist['epochs'] = history.epoch\n",
         "hist.tail(20)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kdT_MArFQdTN",
-        "colab_type": "text"
+        "id": "kdT_MArFQdTN"
       },
       "source": [
         "# **Plot the loss**\n",
@@ -592,9 +532,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IcUBeWYyMsWb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "IcUBeWYyMsWb"
       },
       "source": [
         "axes = plt.gca()\n",
@@ -606,29 +544,26 @@
         "plt.ylabel('loss')\n",
         "plt.legend()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vvQR2Y7bYMA5",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vvQR2Y7bYMA5"
       },
       "source": [
         "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=0)\n",
         "\n",
         "print(\"Testing set Mean Abs Error: {:5.2f}\".format(mae))\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sIugdAJcQjka",
-        "colab_type": "text"
+        "id": "sIugdAJcQjka"
       },
       "source": [
         "# **Make a prediction with the model**\n",
@@ -638,9 +573,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MRHXx8qzv3C_",
-        "colab_type": "code",
-        "colab": {}
+        "id": "MRHXx8qzv3C_"
       },
       "source": [
         "#The csv file has 4 wines\n",
@@ -649,44 +582,38 @@
         "typew = [0,0,1,1] \n",
         "predict_case['type'] = typew"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6BHMumq7wsjy",
-        "colab_type": "code",
-        "colab": {}
+        "id": "6BHMumq7wsjy"
       },
       "source": [
         "#pop off the type from the dataframe\n",
         "prediction_labels = predict_case.pop('quality')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WGngB4Mhwh4x",
-        "colab_type": "code",
-        "colab": {}
+        "id": "WGngB4Mhwh4x"
       },
       "source": [
         "#normalize the data\n",
         "normed_prediction_cases = norm(predict_case)\n",
         "normed_prediction_cases "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nqMFqOHRddP4",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nqMFqOHRddP4"
       },
       "source": [
         "#There are four wines that the model has not seem\n",
@@ -695,47 +622,41 @@
         "test1 = normed_prediction_cases.loc[[number]]\n",
         "test1.transpose()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iWmW2-bY0VeE",
-        "colab_type": "code",
-        "colab": {}
+        "id": "iWmW2-bY0VeE"
       },
       "source": [
         "prediction = model.predict(test1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Nozx-Uw2SXm",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8Nozx-Uw2SXm"
       },
       "source": [
         "print(prediction)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FK4OPWwH8gW8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "FK4OPWwH8gW8"
       },
       "source": [
         "print(\"prediction is \", prediction)\n",
         "print(\"actual value is \", prediction_labels.iloc[number] )"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
