--- a/HP6 fashion_mnist.ipynb
+++ b/HP6 fashion_mnist.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN9iGBgKgNvsSxhkIKwqmU8",
+      "authorship_tag": "ABX9TyOUpGqFGJQTVtja++BcreiT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,14 +24,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/fashion_mnist.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/HP6%20fashion_mnist.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hev4s-gpA4Eo",
-        "colab_type": "text"
+        "id": "hev4s-gpA4Eo"
       },
       "source": [
         "# **Fashion-MNIST**\n",
@@ -46,8 +45,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gtG6OJL8Dltz",
-        "colab_type": "text"
+        "id": "gtG6OJL8Dltz"
       },
       "source": [
         "# **Clone the repo**"
@@ -56,9 +54,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fWpejQ074CEd",
-        "colab_type": "code",
-        "colab": {}
+        "id": "fWpejQ074CEd"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -66,14 +62,13 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nfDPSOSR4yQw",
-        "colab_type": "text"
+        "id": "nfDPSOSR4yQw"
       },
       "source": [
         "Fashion-MNIST is intended to serve as a direct drop-in replacement for the original MNIST dataset to benchmark machine learning algorithms, as it shares the same image size and the structure of training and testing splits.<br><br>\n"
@@ -82,22 +77,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bKuNwSUJ4ZXK",
-        "colab_type": "code",
-        "colab": {}
+        "id": "bKuNwSUJ4ZXK"
       },
       "source": [
         "from IPython.display import Image\n",
         "Image(\"fashion-mnist-sprite.png\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "iK3gZsPSFSCP",
-        "colab_type": "text"
+        "id": "iK3gZsPSFSCP"
       },
       "source": [
         "# **Set the runtime to GPU**\n",
@@ -108,8 +100,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1UjYSxjbDtPD",
-        "colab_type": "text"
+        "id": "1UjYSxjbDtPD"
       },
       "source": [
         "# **Load the necessary libraries**"
@@ -118,9 +109,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aq-EPIuF_zgD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aq-EPIuF_zgD"
       },
       "source": [
         "from __future__ import absolute_import, division, print_function, unicode_literals\n",
@@ -162,14 +151,13 @@
         "\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0N0lyiOv1Bhi",
-        "colab_type": "text"
+        "id": "0N0lyiOv1Bhi"
       },
       "source": [
         "# **Load the Fashion MNIST Data Set**"
@@ -178,23 +166,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HOc5X6LW_7CF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "HOc5X6LW_7CF"
       },
       "source": [
         "#Loading Data\n",
         "(X_train,y_train),(X_test,y_test) = fashion_mnist.load_data()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2H_qeK2w1IQe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2H_qeK2w1IQe"
       },
       "source": [
         "print(X_train.size)\n",
@@ -202,14 +186,13 @@
         "print(X_test.size)\n",
         "print(y_test.size)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LL-JAq_75U6b",
-        "colab_type": "text"
+        "id": "LL-JAq_75U6b"
       },
       "source": [
         "The classes: <br>\n",
@@ -230,22 +213,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jWppSSwC5u1o",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jWppSSwC5u1o"
       },
       "source": [
         "labelNames = [\"top\", \"trouser\", \"pullover\", \"dress\", \"coat\",\n",
         "\t\"sandal\", \"shirt\", \"sneaker\", \"bag\", \"ankle boot\"]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wX_O5rnHD7D3",
-        "colab_type": "text"
+        "id": "wX_O5rnHD7D3"
       },
       "source": [
         "# **Examine the data**"
@@ -254,47 +234,42 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ahWnCubb257X",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ahWnCubb257X"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline  \n",
         "plt.imshow(X_train[1000], cmap='Greys')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pZ6Wtrkz3P2t",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pZ6Wtrkz3P2t"
       },
       "source": [
         "plt.imshow(X_test[530], cmap='Greys')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "evWi5a8uD_YP",
-        "colab_type": "text"
+        "id": "evWi5a8uD_YP"
       },
       "source": [
-        "# **Define some of the hyperparameters**"
+        "# **Define some of the hyperparameters**<br>\n",
+        "<br>\n",
+        "In the code below change the '?' to integers"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3FGhOs7NAAcC",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3FGhOs7NAAcC"
       },
       "source": [
         "#defining Parameters\n",
@@ -303,14 +278,13 @@
         "epoch = ?\n",
         "img_rows, img_cols = 28,28"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BkAnT5E0EG4A",
-        "colab_type": "text"
+        "id": "BkAnT5E0EG4A"
       },
       "source": [
         "# **Reshape the images for the model**"
@@ -319,9 +293,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-JFftXz7AD9Y",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-JFftXz7AD9Y"
       },
       "source": [
         "#Deal with format issues between different backends. Some put the no. of channels in the image before the width and height.\n",
@@ -334,14 +306,13 @@
         "    X_test =X_test.reshape(X_test.shape[0],img_rows,img_cols,1)\n",
         "    input_shape=(img_rows,img_cols,1)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bi1aRBivEMBE",
-        "colab_type": "text"
+        "id": "bi1aRBivEMBE"
       },
       "source": [
         "# **Normalize the data**"
@@ -350,9 +321,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-kT-ecK-AHUl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-kT-ecK-AHUl"
       },
       "source": [
         "#Convert and  scale the test and training data. Bring the scale from 0-255 to 0-1.\n",
@@ -361,14 +330,13 @@
         "X_train /= 255\n",
         "X_test /= 255"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VorNyr6dEPrD",
-        "colab_type": "text"
+        "id": "VorNyr6dEPrD"
       },
       "source": [
         "# **Convert data from categorical to numerical**"
@@ -377,23 +345,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YC9o-UqNAKUr",
-        "colab_type": "code",
-        "colab": {}
+        "id": "YC9o-UqNAKUr"
       },
       "source": [
         "#Convert class vectors to binary class matrices using One-hot encoding\n",
         "y_train = keras.utils.to_categorical(y_train,num_classes=num_classes)\n",
         "y_test = keras.utils.to_categorical(y_test,num_classes=num_classes)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gkcXUMn-EXSw",
-        "colab_type": "text"
+        "id": "gkcXUMn-EXSw"
       },
       "source": [
         "Define the model<br>\n",
@@ -403,9 +368,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z75f0zKpANV6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "z75f0zKpANV6"
       },
       "source": [
         "#Define the model\n",
@@ -421,14 +384,13 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-wi-vU64EpWL",
-        "colab_type": "text"
+        "id": "-wi-vU64EpWL"
       },
       "source": [
         "# **Set up early stopping, if necessary**"
@@ -437,9 +399,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TV7l3XSTAQ9o",
-        "colab_type": "code",
-        "colab": {}
+        "id": "TV7l3XSTAQ9o"
       },
       "source": [
         "my_callback=[EarlyStopping(monitor='val_acc',patience=5,mode=max)]\n",
@@ -451,14 +411,13 @@
         "    metrics=['accuracy']\n",
         ")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Vl4eZYosEuNe",
-        "colab_type": "text"
+        "id": "Vl4eZYosEuNe"
       },
       "source": [
         "# **Train the model**"
@@ -467,9 +426,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9LVXFyXoAUeN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9LVXFyXoAUeN"
       },
       "source": [
         "#Train the model and test/validate the mode with the test data after each cycle(epoch) through the training data\n",
@@ -479,14 +436,13 @@
         "               epochs=epoch,verbose=1,callbacks=my_callback,              \n",
         "               validation_data=(X_test,y_test))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-MZpWKcDEy5A",
-        "colab_type": "text"
+        "id": "-MZpWKcDEy5A"
       },
       "source": [
         "# **Plot the performance**"
@@ -495,9 +451,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gf1ZljFiAmKi",
-        "colab_type": "code",
-        "colab": {}
+        "id": "gf1ZljFiAmKi"
       },
       "source": [
         "#score = model.evaluate(X_test,y_test,verbose=0)\n",
@@ -511,14 +465,13 @@
         "plt.legend(('Training accuracy','Validation Accuracy'))\n",
         "plt.show()\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6AtuNGoJE3iB",
-        "colab_type": "text"
+        "id": "6AtuNGoJE3iB"
       },
       "source": [
         "# **Create a montage of the images and labels**"
@@ -527,9 +480,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LTC9VTPr8ZHv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LTC9VTPr8ZHv"
       },
       "source": [
         "from google.colab.patches import cv2_imshow\n",
@@ -570,15 +521,13 @@
         "cv2_imshow(montage)\n",
         "cv2.waitKey(0)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "OaDOYWsBCcVr",
-        "colab_type": "code",
-        "colab": {},
         "cellView": "form"
       },
       "source": [
@@ -589,15 +538,13 @@
         "epoch = 8\n",
         "img_rows, img_cols = 28,28"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "pQjUN7mkBPpI",
-        "colab_type": "code",
-        "colab": {},
         "cellView": "form"
       },
       "source": [
@@ -615,22 +562,20 @@
         "model.add(Dropout(0.5))\n",
         "model.add(Dense(num_classes,activation='softmax'))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "xkENY6HtC8yd",
-        "colab_type": "code",
-        "colab": {},
         "cellView": "form"
       },
       "source": [
         "#@title \n",
         "https://www.kaggle.com/overload10/keras-conv2d-sample-using-fashion-mnist"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
