--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOaUkWDIgK5UM0ywwpz3SRs",
+      "authorship_tag": "ABX9TyOMUyCS60mokdW8em94H2at",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,8 +142,22 @@
         "id": "TyTWw3ptXfOC"
       },
       "source": [
-        "reg = LinearRegression().fit(X_train, y_train)\n"
+        "reg = LinearRegression().fit(X_train, y_train)"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# save the model to disk\n",
+        "import pickle\n",
+        "filename = 'finalized_model.sav'\n",
+        "pickle.dump(reg, open(filename, 'wb'))"
+      ],
+      "metadata": {
+        "id": "-ZujyEv09S7N"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -170,6 +184,17 @@
       "source": [
         "y_pred = reg.predict(np.array(X_test))"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test[0]"
+      ],
+      "metadata": {
+        "id": "Ve3qYapd-OgM"
+      },
       "execution_count": null,
       "outputs": []
     },
