--- a/DecisionTrees1b.ipynb
+++ b/DecisionTrees1b.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees1b.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNLW+ZhS78Ntjub39yzh1NU",
+      "authorship_tag": "ABX9TyPJ/01mloLAwl5ipn8+BgFA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -284,6 +284,33 @@
         "print(\"Results Using Entropy:\")\n",
         "accuracy_scores(y_test, y_pred_entropy)"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment**: <br>\n",
+        "Use a Decision Tree model on the Iris dataset. <br>\n",
+        "Compare the Gini index to Entropy for model performance <br>\n",
+        "\n",
+        "**The Iris Dataset**: https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Sz4DrEVpO3mi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cols = ['sepal_length', ' sepal_width', 'petal_length', 'petal_width', 'class']\n",
+        "df = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data', names=cols)\n",
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "38uC_MQNP7Xr"
+      },
       "execution_count": null,
       "outputs": []
     }
