--- a/DecisionTrees1.ipynb
+++ b/DecisionTrees1.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOlHG/Z1RGFGeIXCh9sW2In",
+      "authorship_tag": "ABX9TyOdWLwSdM3XbNhf0mctD5Az",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,6 +85,28 @@
       "source": [
         "Image(\"images/Decision Tree 2.png\" , width=640)"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Image(\"images/decTreeChart.png\" , width=640)"
+      ],
+      "metadata": {
+        "id": "kis9bz9FSVdS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Image(\"images/DecTree.png\" )"
+      ],
+      "metadata": {
+        "id": "f712dUsJSjLF"
+      },
       "execution_count": null,
       "outputs": []
     },
