--- a/DecisionTrees3.ipynb
+++ b/DecisionTrees3.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMMd8ounvQD0adzkvDeo6V9",
+      "authorship_tag": "ABX9TyPdFUlisNXLY7Gw7e4Ew9oP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +88,17 @@
         "# load dataset\n",
         "diabetes= pd.read_csv(\"pima_indians_diabetes.csv\", header=None, names=col_names)"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "diabetes.describe()"
+      ],
+      "metadata": {
+        "id": "0RJkVvuTY58e"
+      },
       "execution_count": null,
       "outputs": []
     },
